--- a/style/style.css
+++ b/style/style.css
@@ -4,3 +4,66 @@
 
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css');
 
+*{
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    font-size: 16px;
+}
+
+header{
+    width: 100%;
+    height: 100vh; /* dimensionar para que fique na altura da tela, independente do dispositivo*/
+    overflow: hidden;
+    position: relative; /* para se usar um baner na posição absoluta precisamos informar que o header e relativo*/
+}
+
+.img-wrapper{
+    width: 100%;
+    height: 100%;
+    overflow: hidden; /* remove qualquer posibilidade de barra de rolagem horizontal*/
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.img-wrapper img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* a imagem ser ajustada em forma de corte*/
+    opacity: 0.7;
+}
+
+.banner{
+    position: absolute;
+    top: 30%;
+    left: 15%;
+
+}
+
+.banner h1{
+    color: #ffffff;
+    font-size: 3rem;
+    font-family: "Baloo Da 2", serif;
+    font-weight: 200; /* peso da fonte */
+    text-shadow: 0.3rem 0.4rem 2px rgba(0, 0, 0, 0.5);
+    margin-bottom: 2rem;
+}
+
+.banner p{
+    font-family: "Josefin Slab", serif;
+    color: #fff;
+    font-size: 2rem;
+    text-shadow: 0.2rem 0.2rem 2px rgba(0, 0, 0, 0.4);
+    margin-bottom: 2rem;
+}
+
+.banner button{
+    font-family: "Muli" serif;
+    color: #fff;
+    background: #642B73;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #C6426E, #642B73);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #C6426E, #642B73); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    padding: 1rem 3rem;
+    
+}
