--- a/style/style.css
+++ b/style/style.css
@@ -32,6 +32,16 @@ header{
     height: 100%;
     object-fit: cover; /* a imagem ser ajustada em forma de corte*/
     opacity: 0.7;
+    animation: zoom 25s; /*codigo insere a animação de zoom na imagem*/
+}
+
+@keyframes zoom{ /*cria o movimento da imagem de zoom*/
+    0%{
+        transform: scale(1.3);
+    }
+    100%{
+        transform: scale(1.0);
+    }    
 }
 
 .banner{
@@ -48,6 +58,9 @@ header{
     font-weight: 200; /* peso da fonte */
     text-shadow: 0.3rem 0.4rem 2px rgba(0, 0, 0, 0.5);
     margin-bottom: 2rem;
+    opacity: 0;
+    animation: moveBanner 1s 0.5s forwards;
+    
 }
 
 .banner p{
@@ -56,14 +69,36 @@ header{
     font-size: 2rem;
     text-shadow: 0.2rem 0.2rem 2px rgba(0, 0, 0, 0.4);
     margin-bottom: 2rem;
+    opacity: 0;
+    animation: moveBanner 1s 0.7s forwards;
 }
 
 .banner button{
     font-family: "Muli" serif;
     color: #fff;
+    font-size: 1.1rem;
+    text-transform: uppercase;
     background: #642B73;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #C6426E, #642B73);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #C6426E, #642B73); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     padding: 1rem 3rem;
-    
+    border: none;
+    border-radius: 5px;
+    cursor: pointer; /*interação do ponteiro do mouse*/ 
+    opacity: 0; 
+    animation: moveBanner 1s 0.9s forwards;  
+}
+
+.banner button:hover{
+    color: rgb(24, 24, 24);
+}
+
+@keyframes moveBanner{
+    0%{
+        transform: translateY(10rem) rotatey(-30deg);
+    }
+    100%{
+        transform: translatey(0) rotateY(0);
+        opacity: 1;
+    }
 }
