--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,8 @@
 *{
     margin: 0;
     padding: 0;
+    list-style: none; /*retira os bulets dos li*/
+    text-decoration: none; /*remover o sublinhado dos links*/
 }
 
 body{
@@ -18,6 +20,33 @@ header{
     height: 100vh; /* dimensionar para que fique na altura da tela, independente do dispositivo*/
     overflow: hidden;
     position: relative; /* para se usar um baner na posição absoluta precisamos informar que o header e relativo*/
+}
+
+:root{
+    --font-primary: "Baloo Da 2", serif;
+    --font-secundary: "Josefin Slab", serif;
+    --font-action: "Muli", serif;
+}
+
+.hamburguer{
+    /*background-color: red;*/
+    width: 2rem;
+    height: 2rem;
+    position: fixed;
+    z-index: 100; /* eixo x coloca o item a frente dos demais*/
+    right: 2rem;
+    top: 2rem;
+    display: flex; /* habilitar as linhas do menu hamburquer*/
+    flex-direction: column; /*indica a direção das linhas do menu hamburquer*/
+    justify-content: space-evenly; /*separa as linhas do menu hamburquer de forma que fiquem com mesmo espaçamento*/
+}
+
+.line{
+    width: 100%;
+    height: .1rem;
+    background-color: #fff;
+    box-shadow: 0.1rem 0.1rem black;
+
 }
 
 .img-wrapper{
@@ -54,7 +83,7 @@ header{
 .banner h1{
     color: #ffffff;
     font-size: 3rem;
-    font-family: "Baloo Da 2", serif;
+    font-family: var(--font-primary);
     font-weight: 200; /* peso da fonte */
     text-shadow: 0.3rem 0.4rem 2px rgba(0, 0, 0, 0.5);
     margin-bottom: 2rem;
@@ -64,7 +93,7 @@ header{
 }
 
 .banner p{
-    font-family: "Josefin Slab", serif;
+    font-family: var(--font-secundary);
     color: #fff;
     font-size: 2rem;
     text-shadow: 0.2rem 0.2rem 2px rgba(0, 0, 0, 0.4);
@@ -74,7 +103,7 @@ header{
 }
 
 .banner button{
-    font-family: "Muli" serif;
+    font-family: var(--font-action);
     color: #fff;
     font-size: 1.1rem;
     text-transform: uppercase;
@@ -101,4 +130,70 @@ header{
         transform: translatey(0) rotateY(0);
         opacity: 1;
     }
+}
+
+.sidebar{
+    width: 25rem;
+    height: 100vh;
+    background-color: #fff;
+    position: fixed;
+    top: 0;
+    right: 0; /*alinha a direita*/
+    right: -25rem;
+    cursor: pointer;
+
+}
+
+.sidebar.show-menu{
+    right: 0;
+}
+
+.menu{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.menu-item{
+    text-align: center;
+    margin-bottom: .5rem; /*espaçamento dos itens do menu*/
+}
+
+.menu-link{
+    font-family: var(--font-action);
+    font-size: 2rem;
+    color: #555;
+    transition: color 1s; /*coloca tempo na transição da cor do link*/
+}
+
+.menu-link:hover{
+    color: #6a3093;
+
+}
+
+.social-media{
+    position: absolute;
+    bottom: 2rem;
+    width: 100%;
+    display: flex; /*habilita as posições*/
+    justify-content: space-around; /*separa os icones de forma justificada e uniforme*/
+}
+
+.social-media i{
+    background-color: #6a3093;
+    color: #ffffff;
+    height: 2.5rem;
+    width: 2.5rem;
+    font-size: 1.8rem; /*o icone tem tamanho de fonte neste caso por isso faz seu ajuste aqui*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    transition: background-color .5s;
+}
+
+.social-media i:hover{
+    background-color: #a044ff;
+
 }
