--- a/style/style.css
+++ b/style/style.css
@@ -39,6 +39,11 @@ header{
     display: flex; /* habilitar as linhas do menu hamburquer*/
     flex-direction: column; /*indica a direção das linhas do menu hamburquer*/
     justify-content: space-evenly; /*separa as linhas do menu hamburquer de forma que fiquem com mesmo espaçamento*/
+    cursor: pointer;
+}
+
+.show-menu .hamburguer{
+    right: 18rem;
 }
 
 .line{
@@ -46,6 +51,49 @@ header{
     height: .1rem;
     background-color: #fff;
     box-shadow: 0.1rem 0.1rem black;
+    transition: transform .3s;
+
+}
+
+.show-menu #line1{
+    transform: rotate(45deg) translate(.4rem, .4rem); /*faz a rotação da linha e o posicionamento*/
+}
+
+.show-menu #line2{
+    opacity: 0;
+    visibility: hidden; /*visibilidade oculta*/
+}
+
+.show-menu #line3{
+    transform: rotate(-45deg) translate(.1rem, -.4rem);
+}
+
+.hamburguer span{
+    position: absolute;
+    left: 3rem;
+    height: 2rem;
+    width: 6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #a044ff;
+    color: #ffffff;
+    font-family: var(--font-action);
+    opacity: 0;    
+}
+
+.hamburguer span::before{ /*inserido antes (before), contrução de um triangulo*/
+    content: "";
+    position: absolute;
+    border-right: .5rem solid #a044ff;
+    border-top: .5rem solid transparent;
+    border-left: .5rem solid transparent;
+    border-bottom: .5rem solid transparent;
+    left: -1rem;
+}
+
+.show-menu .hamburguer:hover span{
+    opacity: 1;
 
 }
 
@@ -140,11 +188,10 @@ header{
     top: 0;
     right: 0; /*alinha a direita*/
     right: -25rem;
-    cursor: pointer;
-
+    
 }
 
-.sidebar.show-menu{
+.show-menu .sidebar{
     right: 0;
 }
 
