--- a/style/style.css
+++ b/style/style.css
@@ -242,5 +242,64 @@ header{
 
 .social-media i:hover{
     background-color: #a044ff;
+}
 
+/*Habilidades profissionais*/
+
+.conhecimentos{
+    display: grid;
+    grid-template-columns: repeat(16, 1fr); /*formatação das colunas*/
+    grid-template-rows: repeat(6, 6rem); /*formatação de linhas*/
+    row-gap: .5rem; /*espaçamento*/
+}
+
+.conhecimento:nth-child(1){
+    grid-column: 4 / 7; /*começa na coluna 4 e termina na coluna 7*/
+    grid-row: 1 / 3; /*linha que vai estar*/
+}
+
+.conhecimento:nth-child(2){
+    grid-column: 3 / 6; /*começa na coluna 4 e termina na coluna 7*/
+    grid-row: 3 / 5; /*linha que vai estar*/
+}
+
+.conhecimento:nth-child(3){
+    grid-column: 4 / 7; /*começa na coluna 4 e termina na coluna 7*/
+    grid-row: 5 / -1; /*linha que vai estar*/
+}
+
+.conhecimento:nth-child(4){
+    grid-column: 11/ 14; /*começa na coluna 4 e termina na coluna 7*/
+    grid-row: 1 / 3; /*linha que vai estar*/
+}
+
+.conhecimento:nth-child(5){
+    grid-column: 12 / 15; /*começa na coluna 4 e termina na coluna 7*/
+    grid-row: 3 / 5; /*linha que vai estar*/
+}
+
+.conhecimento:nth-child(6){
+    grid-column: 11 / 14; /*começa na coluna 4 e termina na coluna 7*/
+    grid-row: 5 / -1; /*linha que vai estar*/
+}
+
+.sessao-conhecimentos{
+    background-color: #f5f5f5;
+}
+
+.sessao-header{
+    display: flex;
+    justify-content: center;
+}
+
+.sessao-header h1{
+    font-family: var(--font-primary);
+    font-size: 3rem;
+    color: #4b4b4b;
+    border-bottom: solid 3px #6a3093;   
+    margin-bottom: 1.5rem;    
+}
+
+.conhecimento-header{
+    
 }
