--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,8 @@
     text-decoration: none; /*remover o sublinhado dos links*/
 }
 
+/*CABEÇALHO*/
+
 body{
     font-size: 16px;
 }
@@ -244,7 +246,7 @@ header{
     background-color: #a044ff;
 }
 
-/*Habilidades profissionais*/
+/*HHABILIDADES PROFISSIONAIS*/
 
 .conhecimentos{
     display: grid;
@@ -331,4 +333,170 @@ header{
     object-fit: cover; /*faz com que a imagem fique dentro do envelope (wrapper)*/
     width: 100%;
     opacity: 0.7;
+}
+
+/*PROJETOS DESENVOLVIDOS*/
+
+.projetos{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.card{ /*ajusta o tamanho da imagem*/
+    width: 18rem;
+    height: 25rem;
+    position: relative;
+}
+
+.card-img-wrapper{
+    width: 100%;
+    height: 100%;
+    background-color: #262626;
+    border-radius: .5rem;
+}
+
+.card-img-wrapper img{ /*formatar tamanho da imagem*/
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: .5rem; 
+    opacity: .8;
+
+}
+
+.card-info{
+    position: absolute;
+    bottom: 0;
+    padding: 2rem;
+    text-shadow: 0.1rem 0.1rem 0.3rem #000;    
+}
+
+.card-info h2{
+    font-family: var(--font-primary);
+    font-size: 1.8rem;
+    font-weight: 500;
+    color: #f5f5f5;
+}
+
+.card-info h3{
+    font-family: var(--font-action);
+    font-weight: bolder;
+    color: #ff4081;
+    padding-bottom: .5rem;
+}
+
+.card-info p{
+    font-family: var(--font-secundary);
+    color: #fff;
+    font-weight: 500;
+    width: 90%;
+    padding-bottom: 2rem;
+}
+
+.btn{
+    background: #642B73;
+    background: -webkit-linear-gradient(to right, #C6426E, #642B73);
+    background: linear-gradient(to right, #C6426E, #642B73);
+    font-family: var(--font-action);
+    font-size: 1.5rem;
+    color: #eee;
+    border-radius: .5rem;
+    border: none;
+    box-shadow: 0 .1rem .8rem #00000005;
+}
+
+.card-info button{
+    width: 8rem;
+    height: 2.5rem;
+    
+}
+
+/*FORMULARIO DE CONTATO*/
+
+.sessao-contato{
+    width: 100%;
+    height: 100vh;
+    background-color: #272727;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.contato-wrapper{
+    width: 60%;
+    height: 40rem;
+    display: flex;
+    box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.5);
+}
+
+.contato-left{
+    width: 35%;
+    background-image: url(/image/img-contato.jpg);
+    background-size: cover;
+}
+
+.contato-right{
+    width: 65%;
+    background-color: #f7f7f7;
+    padding: 1rem 3rem 3rem 3rem;
+}
+
+.sessao-contato h1{
+    font-family: var(--font-primary);
+    text-align: center;
+    color: #272727;
+    font-size: 3rem;
+    font-weight: lighter;
+}
+
+.sessao-contato form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.input-group{
+    position: relative;
+}
+
+.field{
+    background: transparent;
+    border: none;
+    width: 35rem;
+    height: 3rem;
+    font-size: 1.5rem;
+    font-family: var(--font-secundary);
+    border-bottom: 2px dashed #272727;
+    outline: none;
+    margin: 1rem 0;
+}
+
+.input-group textarea{
+    padding-top: 0.5rem;
+    max-width: 35rem;
+    max-height: 12rem;
+}
+
+.field-label{
+    position: absolute;
+    left: 0;
+    top: 2rem;
+    font-family: var(--font-secundary);
+    font-size: 1.2rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    transition: all .3s;    
+}
+
+.field:focus ~ label{
+    top: 0;
+}
+
+.btn-submit{
+    text-transform: uppercase;
+    width: 85%;
+    height: 2rem;
+    margin-top: 1rem;
+        
 }
