--- a/style/style.css
+++ b/style/style.css
@@ -5,8 +5,8 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css');
 
 *{
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     list-style: none; /*retira os bulets dos li*/
     text-decoration: none; /*remover o sublinhado dos links*/
 }
@@ -252,46 +252,47 @@ header{
     background-color: #a044ff;
 }
 
-/*HHABILIDADES PROFISSIONAIS*/
+/*HABILIDADES PROFISSIONAIS*/
 
 .conhecimentos{
     display: grid;
     grid-template-columns: repeat(16, 1fr); /*formatação das colunas*/
-    grid-template-rows: repeat(6, 6rem); /*formatação de linhas*/
+    grid-template-rows: repeat(8, 5.8rem); /*formatação de linhas*/
     row-gap: .5rem; /*espaçamento*/
 }
 
 .conhecimento:nth-child(1){
-    grid-column: 4 / 7; /*começa na coluna 4 e termina na coluna 7*/
+    grid-column: 3 / 6; /*começa na coluna 4 e termina na coluna 7*/
     grid-row: 1 / 3; /*linha que vai estar*/
 }
 
 .conhecimento:nth-child(2){
-    grid-column: 3 / 6; /*começa na coluna 4 e termina na coluna 7*/
-    grid-row: 3 / 5; /*linha que vai estar*/
+    grid-column: 2 / 5; /*começa na coluna 4 e termina na coluna 7*/
+    grid-row: 4 / 6; /*linha que vai estar*/
 }
 
 .conhecimento:nth-child(3){
-    grid-column: 4 / 7; /*começa na coluna 4 e termina na coluna 7*/
-    grid-row: 5 / -1; /*linha que vai estar*/
+    grid-column: 3 / 6; /*começa na coluna 4 e termina na coluna 7*/
+    grid-row: 7 / 9; /*linha que vai estar*/
 }
 
 .conhecimento:nth-child(4){
-    grid-column: 11/ 14; /*começa na coluna 4 e termina na coluna 7*/
+    grid-column: 12/ 15; /*começa na coluna 4 e termina na coluna 7*/
     grid-row: 1 / 3; /*linha que vai estar*/
 }
 
 .conhecimento:nth-child(5){
-    grid-column: 12 / 15; /*começa na coluna 4 e termina na coluna 7*/
-    grid-row: 3 / 5; /*linha que vai estar*/
+    grid-column: 13 / 16; /*começa na coluna 4 e termina na coluna 7*/
+    grid-row: 4 / 6; /*linha que vai estar*/
 }
 
 .conhecimento:nth-child(6){
-    grid-column: 11 / 14; /*começa na coluna 4 e termina na coluna 7*/
-    grid-row: 5 / -1; /*linha que vai estar*/
+    grid-column: 12 / 15; /*começa na coluna 4 e termina na coluna 7*/
+    grid-row: 7 / 9; /*linha que vai estar*/
 }
 
-.sessao-conhecimentos{
+.sessao-conhecimento{
+    height: 100vh;
     background-color: #f5f5f5;
 }
 
@@ -331,7 +332,7 @@ header{
 
 .conhecimento-img-wrapper{
     grid-column: 7 / 11;
-    grid-row: 2 / 6;
+    grid-row: 3 / 7;
     width: 100%;
 }
 
@@ -343,9 +344,16 @@ header{
 
 /*PROJETOS DESENVOLVIDOS*/
 
+.sessao-projetos{
+    width: 100%;
+    height: 100vh;
+}
+
 .projetos{
+    height: 100%;
     display: flex;
     justify-content: space-evenly;
+    padding-top: 7rem;    
 }
 
 .card{ /*ajusta o tamanho da imagem*/
@@ -422,7 +430,7 @@ header{
 .sessao-contato{
     width: 100%;
     height: 100vh;
-    background-color: #272727;
+    background-color: #555555;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -487,7 +495,7 @@ header{
 .field-label{
     position: absolute;
     left: 0;
-    top: 2rem;
+    /*top: 2rem;*/
     font-family: var(--font-secundary);
     font-size: 1.2rem;
     font-weight: 700;
@@ -495,9 +503,9 @@ header{
     transition: all .3s;    
 }
 
-.field:focus ~ label{
+/*.field:focus ~ label{
     top: 0;
-}
+}*/
 
 .btn-submit{
     text-transform: uppercase;
