--- a/style/media_query_1251.css
+++ b/style/media_query_1251.css
@@ -19,43 +19,71 @@
 
 html{
     scroll-behavior: smooth;
+    display: flex;
+    justify-content: center;
+    background-color: #dadada1f;
+        
 }
 
 
-@media screen and (min-width: 1251px) {
+@media screen and (min-width: 1141px) {
 
 
     /*CABEÇALHO*/
 
     body{
         font-size: 16px;
+        max-width: 1141px;
+        margin: 0;
+        
     }
 
+    
+
     header{
-        width: 100%;
+        width: 1141px;
         height: 100vh; /* dimensionar para que fique na altura da tela, independente do dispositivo*/
         overflow: hidden;
         position: relative; /* para se usar um baner na posição absoluta precisamos informar que o header e relativo*/
+        
     }
 
+    .container {
+        width: 1141px;
+        box-shadow: 0.2rem 0.2rem 0.4rem rgba(0, 0, 0, 0.062);
+    }
 
+    .sidebar{
+            width: 25rem;
+            height: 100vh;
+            background-color: #fff;
+            position: fixed;
+            top: 0;
+            right: -25rem;
+            z-index: 99;        
+    }
+
+    .show-menu .sidebar{
+        right: 19rem;
+        
+    }
 
     .hamburguer{
-        /*background-color: red;*/
         width: 2rem;
         height: 2rem;
         position: fixed;
         z-index: 100; /* eixo x coloca o item a frente dos demais*/
-        right: 1.5rem;
         top: 1.5rem;
+        right: 1.5rem;
         display: flex; /* habilitar as linhas do menu hamburquer*/
         flex-direction: column; /*indica a direção das linhas do menu hamburquer*/
         justify-content: space-evenly; /*separa as linhas do menu hamburquer de forma que fiquem com mesmo espaçamento*/
         cursor: pointer;
     }
 
+    
     .show-menu .hamburguer{
-        right: 20rem;
+        right: 40rem;
     }
 
     .line{
@@ -82,7 +110,7 @@ html{
 
     .hamburguer span{
         position: absolute;
-        left: 3rem;
+        left: 70rem;
         height: 2rem;
         width: 6rem;
         display: flex;
@@ -192,20 +220,7 @@ html{
         }
     }
 
-    .sidebar{
-        width: 25rem;
-        height: 100vh;
-        background-color: #fff;
-        position: fixed;
-        top: 0;
-        right: 0; /*alinha a direita*/
-        right: -25rem;
-        z-index: 99;
-    }
-
-    .show-menu .sidebar{
-        right: 0;
-    }
+    
 
     .menu{
         position: absolute;
@@ -589,11 +604,11 @@ html{
         color: #6a3093;
     }
 
-    /*LINK TOPO*/
+    /*LINK TOPO*/    
 
     #link-topo{
         position: fixed;
-        right: 3rem;
+        margin-left: 65rem;
         bottom: 2rem;
         width: 3rem;
         height: 3rem;
@@ -607,6 +622,16 @@ html{
         font-size: 2.5rem;
         border-radius: .3rem;
         box-shadow: 0 0.1rem 0.6rem #000000;
+        
     }
+
+    
+
+    
+
+
+
+
+
 
 }
