--- a/style/media_query_1141.css
+++ b/style/media_query_1141.css
@@ -9,6 +9,7 @@
     padding: 0px;
     list-style: none; /*retira os bulets dos li*/
     text-decoration: none; /*remover o sublinhado dos links*/
+    
 }
 
 :root{
@@ -29,43 +30,18 @@ html{
 @media screen and (min-width: 1141px) {
 
 
-    /*CABEÇALHO*/
+    /*CABECALHO*/
 
     body{
         font-size: 16px;
-        max-width: 1141px;
-        margin: 0;
-        
+        max-width: 1140px;
     }
 
-    
-
     header{
-        width: 1141px;
+        width: 100%;
         height: 100vh; /* dimensionar para que fique na altura da tela, independente do dispositivo*/
         overflow: hidden;
         position: relative; /* para se usar um baner na posição absoluta precisamos informar que o header e relativo*/
-        
-    }
-
-    .container {
-        width: 1141px;
-        box-shadow: 0.2rem 0.2rem 0.4rem rgba(0, 0, 0, 0.062);
-    }
-
-    .sidebar{
-            width: 25rem;
-            height: 100vh;
-            background-color: #fff;
-            position: fixed;
-            top: 0;
-            right: -25rem;
-            z-index: 99;        
-    }
-
-    .show-menu .sidebar{
-        right: 19rem;
-        
     }
 
     .hamburguer{
@@ -73,17 +49,18 @@ html{
         height: 2rem;
         position: fixed;
         z-index: 100; /* eixo x coloca o item a frente dos demais*/
-        top: 1.5rem;
-        right: 1.5rem;
-        display: flex; /* habilitar as linhas do menu hamburquer*/
+        right: auto;
+        transform: translateX(-3rem);       
+        top: 1rem;
+        display: flex; /* habilitar as linhas do menu hamburquer*/        
         flex-direction: column; /*indica a direção das linhas do menu hamburquer*/
         justify-content: space-evenly; /*separa as linhas do menu hamburquer de forma que fiquem com mesmo espaçamento*/
         cursor: pointer;
     }
-
     
     .show-menu .hamburguer{
-        right: 40rem;
+        position: absolute;
+        right: 15rem;
     }
 
     .line{
@@ -92,11 +69,11 @@ html{
         background-color: #fff;
         box-shadow: 0.1rem 0.1rem black;
         transition: transform .3s;
-
+    
     }
 
     .show-menu #line1{
-        transform: rotate(45deg) translate(.4rem, .4rem); /*faz a rotação da linha e o posicionamento*/
+        transform: rotate(45deg) translate(.1rem, .5rem); /*faz a rotação da linha e o posicionamento*/
     }
 
     .show-menu #line2{
@@ -105,23 +82,23 @@ html{
     }
 
     .show-menu #line3{
-        transform: rotate(-45deg) translate(.1rem, -.4rem);
+        transform: rotate(-45deg) translate(.1rem, -.7rem);
     }
 
     .hamburguer span{
-        position: absolute;
-        left: 70rem;
-        height: 2rem;
         width: 6rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        height: 1.5rem;
+        left: 2rem;
         background-color: #a044ff;
         color: #ffffff;
         font-family: var(--font-action);
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;  
         opacity: 0;    
     }
-
+    
     .hamburguer span::before{ /*inserido antes (before), contrução de um triangulo*/
         content: "";
         position: absolute;
@@ -131,19 +108,19 @@ html{
         border-bottom: .5rem solid transparent;
         left: -1rem;
     }
-
+    
     .show-menu .hamburguer:hover span{
         opacity: 1;
-
+    
     }
-
+    
     .img-wrapper{
         width: 100%;
         height: 100%;
         overflow: hidden; /* remove qualquer posibilidade de barra de rolagem horizontal*/
         background-color: rgba(0, 0, 0, 0.5);
     }
-
+    
     .img-wrapper img{
         width: 100%;
         height: 100%;
@@ -151,7 +128,7 @@ html{
         opacity: 0.7;
         animation: zoom 25s; /*codigo insere a animação de zoom na imagem*/
     }
-
+    
     @keyframes zoom{ /*cria o movimento da imagem de zoom*/
         0%{
             transform: scale(1.3);
@@ -161,16 +138,17 @@ html{
         }    
     }
 
+
     .banner{
         position: absolute;
-        top: 30%;
-        left: 15%;
-
+        top: 20%;
+        left: 5%;
+    
     }
 
     .banner h1{
         color: #ffffff;
-        font-size: 3rem;
+        font-size: 2rem;
         font-family: var(--font-primary);
         font-weight: 200; /* peso da fonte */
         text-shadow: 0.3rem 0.4rem 2px rgba(0, 0, 0, 0.5);
@@ -179,21 +157,21 @@ html{
         animation: moveBanner 1s 0.5s forwards;
         
     }
-
+    
     .banner p{
         font-family: var(--font-secundary);
         color: #fff;
-        font-size: 2rem;
+        font-size: 1.8rem;
         text-shadow: 0.2rem 0.2rem 2px rgba(0, 0, 0, 0.4);
         margin-bottom: 2rem;
         opacity: 0;
         animation: moveBanner 1s 0.7s forwards;
     }
-
+    
     .banner button{
         font-family: var(--font-action);
         color: #fff;
-        font-size: 1.1rem;
+        font-size: .9rem;
         text-transform: uppercase;
         background: #642B73;  /* fallback for old browsers */
         background: -webkit-linear-gradient(to right, #C6426E, #642B73);  /* Chrome 10-25, Safari 5.1-6 */
@@ -205,7 +183,7 @@ html{
         opacity: 0; 
         animation: moveBanner 1s 0.9s forwards;  
     }
-
+    
     .banner button:hover{
         color: rgb(24, 24, 24);
     }
@@ -220,18 +198,32 @@ html{
         }
     }
 
+    .sidebar{
+        width: 23rem;
+        height: 100vh;
+        background-color: #ffffff;
+        position: absolute;
+        top: 0;        
+        right: -23rem;
+        z-index: 99;
+    }
+      
     
-
+    .show-menu .sidebar{
+        position: absolute;
+        right: 0rem;
+    }
+    
     .menu{
         position: absolute;
-        top: 40%;
+        top: 45%;
         left: 50%;
         transform: translate(-50%, -50%);
     }
-
+    
     .menu-item{
         text-align: center;
-        margin-bottom: .5rem; /*espaçamento dos itens do menu*/
+        margin-bottom: .2rem; /*espaçamento dos itens do menu*/
     }
 
     .menu-link{
@@ -240,33 +232,33 @@ html{
         color: #555;
         transition: color 1s; /*coloca tempo na transição da cor do link*/
     }
-
+    
     .menu-link:hover{
         color: #6a3093;
-
+    
     }
-
+    
     .social-media{
         position: absolute;
-        bottom: 2rem;
+        bottom: 3rem;
         width: 100%;
         display: flex; /*habilita as posições*/
         justify-content: space-around; /*separa os icones de forma justificada e uniforme*/
     }
-
+    
     .social-media i{
         background-color: #6a3093;
         color: #ffffff;
-        height: 2.5rem;
-        width: 2.5rem;
-        font-size: 1.8rem; /*o icone tem tamanho de fonte neste caso por isso faz seu ajuste aqui*/
+        height: 3rem;
+        width: 3rem;
+        font-size: 2.5rem; /*o icone tem tamanho de fonte neste caso por isso faz seu ajuste aqui*/
         display: flex;
         justify-content: center;
         align-items: center;
         border-radius: 50%;
         transition: background-color .5s;
     }
-
+    
     .social-media i:hover{
         background-color: #a044ff;
     }
@@ -608,20 +600,19 @@ html{
 
     #link-topo{
         position: fixed;
-        margin-left: 65rem;
-        bottom: 2rem;
-        width: 3rem;
-        height: 3rem;
+        padding: .3rem;
+        bottom: 1.5rem;        
+        margin-left: 67rem;
         background: #642B73;
         background: -webkit-linear-gradient(to right, #C6426E, #642B73);
         background: linear-gradient(to right, #C6426E, #642B73);
         display: flex;
-        justify-content: center;
-        align-items: center;
+        justify-content: center;        
         color: white;
         font-size: 2.5rem;
         border-radius: .3rem;
         box-shadow: 0 0.1rem 0.6rem #000000;
+        z-index: 101;
         
     }
 
