--- a/style/media_query_1141.css
+++ b/style/media_query_1141.css
@@ -148,7 +148,7 @@ html{
 
     .banner h1{
         color: #ffffff;
-        font-size: 2rem;
+        font-size: 3rem;
         font-family: var(--font-primary);
         font-weight: 200; /* peso da fonte */
         text-shadow: 0.3rem 0.4rem 2px rgba(0, 0, 0, 0.5);
@@ -161,7 +161,7 @@ html{
     .banner p{
         font-family: var(--font-secundary);
         color: #fff;
-        font-size: 1.8rem;
+        font-size: 2.5rem;
         text-shadow: 0.2rem 0.2rem 2px rgba(0, 0, 0, 0.4);
         margin-bottom: 2rem;
         opacity: 0;
@@ -169,10 +169,7 @@ html{
     }
     
     .banner button{
-        font-family: var(--font-action);
-        color: #fff;
-        font-size: .9rem;
-        text-transform: uppercase;
+        
         background: #642B73;  /* fallback for old browsers */
         background: -webkit-linear-gradient(to right, #C6426E, #642B73);  /* Chrome 10-25, Safari 5.1-6 */
         background: linear-gradient(to right, #C6426E, #642B73); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -183,8 +180,15 @@ html{
         opacity: 0; 
         animation: moveBanner 1s 0.9s forwards;  
     }
+
+    .banner a{
+        font-family: var(--font-action);
+        color: #fff;
+        font-size: 1rem;
+        text-transform: uppercase;
+    }
     
-    .banner button:hover{
+    .banner a:hover{
         color: rgb(24, 24, 24);
     }
 
@@ -210,8 +214,11 @@ html{
       
     
     .show-menu .sidebar{
-        position: absolute;
-        right: 0rem;
+        position: fixed;
+        right: auto;
+        margin-left: 48.3rem;
+        
+        
     }
     
     .menu{
