--- a/style/style.css
+++ b/style/style.css
@@ -33,7 +33,16 @@ html{
     body{
         font-size: 16px;
         max-width: 1140px;
+        
+        
+        
+    }
+
+    .container{
         height: 100vh;
+        background-color: #f5f5f5;
+        position: relative;
+        
     }
 
 
@@ -245,13 +254,14 @@ html{
     }
 
     .confirmacao-envio{
-        height: 20rem;
+        height: 60%;        
     }
 
 
     .confirmacao-envio-header{
         margin-left: 1rem;
         margin-bottom: 1rem;
+        
     }
 
     .confirmacao-envio-header h1{
@@ -262,7 +272,8 @@ html{
 
     .confirmacao-envio-header p {
         font-family: var(--font-secundary);
-        font-size: 2rem-;
+        font-size: 1.6rem;
+        padding-top: 1rem;
     }
 
     /*RODAPÉ*/
@@ -273,8 +284,7 @@ html{
         background-color: #dadada;
         display: flex;
         justify-content: center;
-        align-items: center;
-        
+        align-items: center;        
         }
 
     .footer-logo{
@@ -291,7 +301,7 @@ html{
     }
 
     .footer-content{
-        width: 100%;
+        width: 100%;        
         display: flex;
         justify-content: center;
         align-items: center;
