--- a/style/media_query_320_700.css
+++ b/style/media_query_320_700.css
@@ -56,7 +56,7 @@
     }
 
     .show-menu #line1{
-        transform: rotate(45deg) translate(.1rem, .5rem); /*faz a rotação da linha e o posicionamento*/
+        transform: rotate(45deg) translate(.6rem); /*faz a rotação da linha e o posicionamento*/
     }
 
     .show-menu #line2{
@@ -65,7 +65,7 @@
     }
 
     .show-menu #line3{
-        transform: rotate(-45deg) translate(-.11rem, -.52rem);
+        transform: rotate(-45deg) translate(.3rem);
     }
 
     .hamburguer span{
@@ -167,7 +167,14 @@
         animation: moveBanner 1s 0.9s forwards;  
     }
     
-    .banner button:hover{
+    .banner a{
+        font-family: var(--font-action);
+        color: #fff;
+        font-size: 1rem;
+        text-transform: uppercase;
+    }
+
+    .banner a:hover{
         color: rgb(24, 24, 24);
     }
 
@@ -494,10 +501,7 @@
         transition: all .3s;    
     }
     
-    /*.field:focus ~ label{
-        top: 0;
-    }*/
-    
+      
     .btn-submit{
         text-transform: uppercase;
         width: 85%;
@@ -510,18 +514,16 @@
     
     footer{
         width: 100%;
-        height: 16rem;
+        height: 18rem;
         background-color: #dadada;
         display: flex;
         justify-content: center;
         align-items: center;
-        
     }
     
     .footer-logo{
         width: 100%;
         padding-top: 1rem;
-        padding-left: 2rem;
         padding-bottom: .5rem;
         display: flex;
         justify-content: center;
@@ -549,15 +551,21 @@
         padding-left: 2rem;
         padding-right: 2rem;
         text-align: center;
-        
-        
+        font-weight: bold;
     }
 
     .footer-copyright p{
         font-family: var(--font-primary);
         color: #000000;        
         font-size: 1rem;
-        
+    }
+    
+    .footer-copyright a{
+        color: #252525;
+    }
+
+    .footer-copyright a:hover{
+        color: #6a3093;
     }
     
     .footer-social{
